fix: fix overlapping labels in the product card on iPhone

--- a/source/sass/blocks-2/product-card.scss
+++ b/source/sass/blocks-2/product-card.scss
@@ -1,4 +1,6 @@
 .product-card {
+  position: relative;
+  z-index: 0;
   display: grid;
   grid-template-columns: 100%;
   font: 500 14px/17px $main-font-family;
@@ -118,7 +120,7 @@
 
 .product-card__slider {
   position: relative;
-  z-index: 0;
+  z-index: -1;
   grid-area: 1 / 1 / 2 / 2;
   width: 100%;
   border-radius: 10px;
